--- a/themes/huxblog/layout/post.ejs
+++ b/themes/huxblog/layout/post.ejs
@@ -126,7 +126,7 @@ layout: layout
         <% } %>
 
     <!-- Sidebar Container -->
-
+            <% if(config.post_sidebar) { %>
             <div class="
                 col-lg-8 col-lg-offset-2
                 col-md-10 col-md-offset-1
@@ -146,7 +146,7 @@ layout: layout
                 <% }%>
 
                 <!-- Friends Blog -->
-                <% if(config.friends) { %>
+                <% if(config.friends && config.friends.length) { %>
                 <hr>
                 <h5>FRIENDS</h5>
                 <ul class="list-inline">
@@ -157,6 +157,7 @@ layout: layout
                 </ul>
                 <% }%>
             </div>
+            <% }%>
 
         </div>
     </div>
@@ -216,9 +217,7 @@ layout: layout
 <script>
     async("https://cdn.bootcss.com/anchor-js/1.1.1/anchor.min.js",function(){
         anchors.options = {
-          visible: 'always',
-          placement: 'right',
-          icon: '#'
+          icon: '¶'
         };
         anchors.add().remove('.intro-header h1').remove('.subheading').remove('.sidebar-container h5');
     })
